sample/msvc/error/c2075.cpp
// C2075.c
int main() {
   int i[] = 1, 2, 3 };   // C2075
}
